@@ -11,7 +11,6 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.Plugin;
 
-import com.earth2me.essentials.Charge;
 import com.earth2me.essentials.Essentials;
 import com.earth2me.essentials.Teleport;
 import com.earth2me.essentials.User;
@@ -166,8 +165,7 @@ public class TownCommand implements CommandExecutor  {
 							
 							if (!user.isJailed()){
 								Teleport teleport = user.getTeleport();
-								Charge charge = null;
-								teleport.teleport(town.getSpawn(), charge);
+								teleport.teleport(town.getSpawn(),null);
 							}
 						} catch (Exception e) {
 							plugin.sendErrorMsg(player, "Error: " + e.getMessage());
